--- a/src/App.css
+++ b/src/App.css
@@ -2,9 +2,106 @@
   margin: 0;
   padding: 0;
 }
+/* WELCOME SCREEN */
 
-.login-text, .home-text{
-  font-weight: bold;
-  color: pink;
-  font-size: larger;
+.welcome-body {
+  width: 100vw;
+  background-color: black;
+}
+
+.welcome-header {
+  height: 10vh;
+  /* background-color: wheat; */
+  display: flex;
+  
+}
+
+.welcome-header-left {
+  width: 70%;
+  /* background-color: red; */
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+}
+
+.welcome-header-left a {
+  color: white;
+  text-decoration: none;
+  font-weight: 400;
+  font-size: 18px; /* Adjust font size if necessary */
+  padding: 10px 10px; /* Add padding for better hover effect */
+  border-radius: 5px; /* Add rounded corners */
+  transition: background-color 0.3s ease, color 0.3s ease; /* Smooth transition */
+}
+
+.welcome-header-left > a:hover {
+  cursor: pointer;
+  background-color: white; /* Change background to white on hover */
+  color: black; /* Change text color to match the red background */
+}
+
+.header-logo img{
+  height: 25px;
+  width: auto;
+}
+.header-logo > img:hover{
+  cursor: pointer;
+}
+
+.welcome-header-right{
+  width: 40%;
+  /* background-color: greenyellow; */
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 40px;
+}
+
+
+.welcome-header-right > a {
+  color: white;
+  text-decoration: none;
+  font-weight: 400;
+  font-size: 18px; /* Adjust font size if necessary */
+  padding: 10px 10px; /* Add padding for better hover effect */
+  border-radius: 5px; /* Add rounded corners */
+  transition: background-color 0.3s ease, color 0.3s ease; /* Smooth transition */
+}
+
+.welcome-header-right > a:hover {
+  cursor: pointer;
+  background-color: white; /* Change background to white on hover */
+  color: black; /* Change text color to match the red background */
+}
+
+.header-search-icon{
+  color: white;
+  height: 20px;
+  width: auto;
+}
+
+.join-prime-header {
+  background-color: #007FFF;
+  color: white;
+  padding: 10px 10px;
+  border-radius: 5px;
+  border: none;
+  transition: background-color 0.3s ease;
+  font-weight: 400;
+  font-size: 18px;
+}
+
+.join-prime-header:hover {
+  background-color: #318CE7;
+}
+
+
+.welcome-body {
+  height: 140vh;
+  background-color: black;
+}
+
+.welcome-footer {
+  height: 20vh;
+  background-color: wheat;
 }
