--- a/src/App.css
+++ b/src/App.css
@@ -8,6 +8,7 @@
   width: 100vw;
   background-color: black;
 }
+/* WELCOME SCREEN HEADER STARTING */
 
 .welcome-header {
   height: 10vh;
@@ -78,6 +79,7 @@
   color: white;
   height: 20px;
   width: auto;
+  cursor: pointer;
 }
 
 .join-prime-header {
@@ -89,17 +91,92 @@
   transition: background-color 0.3s ease;
   font-weight: 400;
   font-size: 18px;
+  cursor: pointer;
 }
 
 .join-prime-header:hover {
   background-color: #318CE7;
 }
 
+/* WELCOME SCREEN HEADER ENDING */
 
+ /* WELCOME SCREEN BODY STARTING */
 .welcome-body {
-  height: 140vh;
   background-color: black;
+  
 }
+.welcome-body-info{
+  position: relative;
+}
+
+
+.body-info-message{
+  width: 45%;
+  height: auto;
+  border-radius: 5px;
+  position: absolute;
+  top: 15%;
+  left: 35px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  gap: 25px; /* Add spacing between elements */
+}
+.body-info-message > h1 {
+  font-size: 3rem;
+  font-weight: bold;
+  color: white;
+}
+
+.body-info-message > h3 {
+  font-size: 18px;
+  font-weight: bold;
+  color: white;
+  margin: 0px 16px 16px 0px;
+}
+
+.sign-in-btn {
+  background-color: whitesmoke;
+  color: black;
+  border-radius: 5px;
+  border: none;
+  transition: background-color 0.3s ease;
+  font-weight: 500;
+  font-size: 20px;
+  cursor: pointer;
+  height: 60px;
+  max-width: 200px;
+  text-align: center;
+  white-space: nowrap;
+}
+
+.sign-in-btn:hover {
+  background-color: #dcdcdf;
+}
+
+.rent-btn {
+  background-color: whitesmoke;
+  color: black;
+  border-radius: 5px;
+  border: none;
+  transition: background-color 0.3s ease;
+  font-weight: 500;
+  font-size: 20px;
+  cursor: pointer;
+  height: 60px;
+  max-width: 120px;
+  text-align: center;
+  white-space: nowrap;
+}
+
+.rent-btn:hover {
+  background-color: #dcdcdf;
+}
+
+.body-info-logo {
+  opacity: 0.7;
+}
+
 
 .welcome-footer {
   height: 20vh;
