Login Form Validation

--- a/src/App.css
+++ b/src/App.css
@@ -101,6 +101,11 @@
   text-decoration: none;
   color: white;
 }
+.join-prime-link-body{
+  text-decoration: none;
+  color: black;
+}
+
 
 /* WELCOME SCREEN HEADER ENDING */
 
