--- a/src/App.css
+++ b/src/App.css
@@ -514,7 +514,7 @@
 /* HOME SCREEN HEADER ENDING */
 
 
-/* HOME SCREEN VIDEO PLAYER */
+/* HOME SCREEN VIDEO PLAYER STARTING*/
 .home-body {
   position: relative;
   width: 100%;
@@ -588,7 +588,7 @@
   justify-content:space-between;
 }
 
-.play-movie{
+.play-movie-button{
   background-color: #ffffff;
   color: white;
   padding: 12px 40px;
@@ -601,9 +601,32 @@
   display: flex;
   gap: 10px;
 }
-.play-movie > p, .play-movie > .button-icon {
+.play-movie-button:hover{
+  background-color: rgba(255, 255, 255, 0.8);
+}
+.play-movie-button > p, .play-movie-button > .button-icon {
   color: black;
 }
+.info-movie-button{
+  background-color: rgba(255, 255, 255, 0.3);
+  color: white;
+  padding: 12px 40px;
+  border-radius: 5px;
+  border: none;
+  transition: background-color 0.3s ease;
+  font-weight: 400;
+  font-size: 18px;
+  cursor: pointer;
+  display: flex;
+  gap: 10px;
+}
+.info-movie-button:hover{
+  background-color: rgba(255, 255, 255, 0.5);
+}
+
+/* HOME SCREEN VIDEO PLAYER ENDING */
+
+
 
 
 
