--- a/src/App.css
+++ b/src/App.css
@@ -708,5 +708,43 @@
 
 /* HOME SCREEN NOW PLAYNIG MOVIE LIST ITEMS ENDING */
 
-
 /* HOME SCREEN ENDING */
+
+/* GPT SCREEN STARTING */
+/* GPT SCREEN HEADER STARTING */
+
+
+.gpt-screen{
+  width: 100vw;
+  /* background-color: black; */
+}
+
+.gpt-header{
+  width: 100vw;
+  height: 20vh;
+  background-color: black;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 30px;
+}
+.search-container{
+  width: 40vw;
+  height: 8vh;
+  background-color: wheat;
+  border-radius: 10px;
+}
+.search-box{
+  width: 100%;
+  height: 8vh;
+  border-radius: 10px;
+  padding-left: 10px;
+  font-size: 20px;
+  border: none;
+  outline: none;
+}
+
+
+
+/* GPT SCREEN HEADER ENDING */
+/* GPT SCREEN ENDING */
