Gemini API Implementation

--- a/src/App.css
+++ b/src/App.css
@@ -719,7 +719,7 @@
   /* background-color: black; */
 }
 
-.gpt-header{
+.gpt-search-bar{
   width: 100vw;
   height: 20vh;
   background-color: black;
