Home Screen Responsiveness

--- a/src/App.css
+++ b/src/App.css
@@ -993,7 +993,29 @@ background: linear-gradient(90deg, rgba(113,113,131,1) 35%, rgba(5,17,19,1) 100%
   .c-logo:hover > img {
     transform: scale(1.11); /* Zoom in the image on hover */
   }
-  
   /* WELCOME SCREEN BODY ENDING */
+
+  /* HOME SCREEN HEADER STARTING */
+
+  .home-screen-mobile-header {
+    width: 100vw;
+    height: 10vh;
+    background-color: rgb(20, 20, 100);
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+  }
+  .header-logo img{
+    height: 25px;
+    width: auto;
+    padding-left: 16px;
+  }
+  .hamburger-logo {
+    color: white;
+    padding-right: 16px;
+  }
+
+
+  /* HOME SCREEN HEADER ENDING */
 
 }
