--- a/src/App.css
+++ b/src/App.css
@@ -1000,12 +1000,12 @@ background: linear-gradient(90deg, rgba(113,113,131,1) 35%, rgba(5,17,19,1) 100%
   .home-screen-mobile-header {
     width: 100vw;
     height: 10vh;
-    background-color: rgb(20, 20, 100);
+    background-color: black;
     display: flex;
     justify-content: space-between;
     align-items: center;
   }
-  .header-logo img{
+  .header-mobile-logo img{
     height: 25px;
     width: auto;
     padding-left: 16px;
@@ -1014,6 +1014,38 @@ background: linear-gradient(90deg, rgba(113,113,131,1) 35%, rgba(5,17,19,1) 100%
     color: white;
     padding-right: 16px;
   }
+  .hamburger-menu-container{
+    width: 200px;
+    background-color: #151920;
+    position: absolute;
+    top: 4.5rem;
+    right: 0;
+    left: 8.5rem;
+    z-index: 20;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    border-radius: 8px;
+    overflow: hidden;
+  }
+  .hamburger-menu-container > a {
+    padding: 16px;
+  }
+ 
+
+/* Ensure the div inside the link also has no underline */
+.home-mobile-chat-icon {
+  display: flex;
+  align-items: center;
+  gap: 10px;
+  text-decoration: none;
+  color: white;
+}
+
+
+
+  
+  
 
 
   /* HOME SCREEN HEADER ENDING */
