--- a/src/App.css
+++ b/src/App.css
@@ -1043,4 +1043,38 @@ background: linear-gradient(90deg, rgba(113,113,131,1) 35%, rgba(5,17,19,1) 100%
 }
   /* HOME SCREEN HEADER ENDING */
 
+  /* PLAY MOVIES SCREEN STARTING */
+
+  .movie-info {
+    position: absolute;
+    bottom: 28%;
+    left: 5%;
+    z-index: 2;
+    color: white;
+    max-width: 600px;
+  }
+  
+  .movie-title {
+    font-size: 2rem;
+    font-weight: bold;
+    margin-bottom: 10px;
+  }
+  
+  .movie-overview {
+    font-size: 1rem;
+    max-width: 90%;
+  }
+  .buttons{
+    width: 280px;
+    position: absolute;
+    bottom: 50%;
+    z-index: 2;
+    left: 5%;
+    display: flex;
+    justify-content:space-between;
+  }
+
+
+  /* PLAY MOVIES SCREEN ENDING */
+
 }
