--- a/src/App.css
+++ b/src/App.css
@@ -1073,8 +1073,36 @@ background: linear-gradient(90deg, rgba(113,113,131,1) 35%, rgba(5,17,19,1) 100%
     display: flex;
     justify-content:space-between;
   }
-
-
   /* PLAY MOVIES SCREEN ENDING */
+
+  /* GPT SCREEN SEARCH SCREEN STARTING */
+
+  .search-container{
+    width: 75vw;
+    height: 6vh;
+    background-color: wheat;
+    border-radius: 10px;
+  }
+  .search-box{
+    width: 100%;
+    height: 6vh;
+    border-radius: 10px;
+    padding-left: 10px;
+    font-size: 16px;
+    border: none;
+    outline: none;
+  }
+  
+  .gpt-movie-scroll-container {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 15px;
+    padding: 20px;
+    scroll-behavior: smooth; /* Enables smooth scrolling */
+  }
+
+
+  /* GPT SCREEN SEARCH SCREEN ENDING */
 
 }
